feat(server): support log lines in log streaming with url params
